# rk3568_npu_person_detect_cpp

./: .gitignore  CMakeLists.txt  README.md
assets/: README.md
models/: README.md
scripts/: build.sh  run_image_demo.sh  run_lcd_demo.sh  run_lcd_threaded_demo.sh
src/: image_detect_demo.cpp  image_infer_demo.cpp  lcd_camera_detect_demo.cpp  lcd_camera_detect_threaded.cpp  test_rknn_runtime.cpp
